# Lumen

./: .gitignore  LUMEN_SOURCE_CODE.txt  PLAN.md  README.md  rork.json
docs/: ADAPTER_FIRST_FINE_TUNING.md  ADAPTER_RUNTIME_IMPROVE_LOOP.md  (+29 more)
tools/lumen_manifest_crawler/: README.md  pyproject.toml
tools/lumen_manifest_crawler/lumen_manifest_crawler/: __init__.py  __main__.py  cli.py  crawler.py  fleet_artifacts.py  improvement_loop.py  manifest.py  validators.py
tools/lumen_manifest_crawler/lumen_manifest_crawler/dataset/: __init__.py  adapter_export.py  compiler.py  cortex.py  e2e_policy.py  e2e_report_normalizer.py  e2e_text_parser.py  embedding.py  executor.py  fine_tuning.py  mimicry.py  mouth.py  rem.py  runtime_ingest.py
tools/lumen_manifest_crawler/lumen_manifest_crawler/output/: hashing.py  writer.py
tools/lumen_manifest_crawler/lumen_manifest_crawler/swift_extractors/: __init__.py  agent_json_value.py  base.py  intent_router.py  memory.py  mimicry.py  model_fleet.py  rem_cycle.py  sentinels.py  tool_definition.py
tools/lumen_manifest_crawler/tests/: test_agent_fine_tuning.py  test_dataset_determinism.py  test_e2e_report_ingest.py  test_embedding_dataset.py  test_embedding_loop_state_augment.py  test_eval_scenario_coverage.py  test_evidence_layer_ingest.py  test_fleet_self_awareness.py  test_improvement_loop.py  test_intent_classifier_tools.py  test_intent_routing.py  test_manifest_validation.py  test_runtime_failure_repairs.py  test_serve_visual_improve_loop.py  test_tool_extraction.py  test_unsloth_export_gguf.py  test_visual_improve_loop_runner.py
(+537 files in other folders)
