[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "lumen-manifest-crawler"
version = "0.1.0"
description = "Deterministic Swift codebase crawler for grounded Lumen agent dataset generation."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Lumen" }]
dependencies = [
  "pydantic>=2.7,<3",
  "typer>=0.12,<1",
  "rich>=13,<15"
]

[project.optional-dependencies]
dev = ["pytest>=8,<9"]
treesitter = ["tree-sitter>=0.22", "tree-sitter-swift>=0.0.1"]

[project.scripts]
lumen-manifest-crawler = "lumen_manifest_crawler.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["lumen_manifest_crawler"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
